--- a/test/scripts/body.html
+++ b/test/scripts/body.html
@@ -3,7 +3,7 @@
     <div>
         <p>
             <picture>
-                <source media="(max-width: 400px)" srcset="./media_mock.png?width=750&amp;format=webply&amp;optimize=medium">
+                <source media="(max-width: 600px)" srcset="./media_mock.png?width=750&amp;format=webply&amp;optimize=medium">
                 <img src="/test/scripts/media_mock.png?width=2000&amp;format=webply&amp;optimize=medium" alt="" loading="eager">
             </picture>
         </p>
@@ -30,7 +30,7 @@
             culpa qui officia deserunt mollit anim id est <a href="https://www.hlx.live/">laborum</a>.</p>
         <p>
             <picture>
-                <source media="(max-width: 400px)"
+                <source media="(max-width: 600px)"
                     srcset="/test/scripts/media_mock.png?width=750&amp;format=webply&amp;optimize=medium">
                 <img src="/test/scripts/media_mock.png?width=2000&amp;format=webply&amp;optimize=medium"
                     alt="" loading="eager">
@@ -45,7 +45,7 @@
 &lt;script src="/scripts.js" type="module"&gt;&lt;/script&gt;
 &lt;link rel="stylesheet" href="/styles.css"/&gt;
         </code></pre>
-        <div class="example"><
+        <div class="hero">
             <p>Lorem ipsum dolor sit amet, <strong>consectetur</strong> adipiscing elit, sed do eiusmod tempor incididunt ut
                 labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 aliquip ex ea commodo <em>consequat</em>. Duis aute irure dolor in reprehenderit in voluptate velit esse
